# vulkanscratch

./: Cargo.toml  log.txt
shader/: shader.comp
src/: context.rs  main.rs
