[package]
name = "vulkanscratch"
version = "0.1.0"
authors = ["Jakub HlusiÄka <limeth@protonmail.com>"]

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shader-derive = { git = "https://github.com/vulkano-rs/vulkano" }
rayon = "0.7.1"
rand = "0.3.15"
secp256k1 = "*"
